fix the spacing of the welcome text to make all text fit on the screen

--- a/index-styling.css
+++ b/index-styling.css
@@ -54,7 +54,7 @@ p
 #title-card-2
 {
     padding-left:6%;
-    padding-top:11%;
+    padding-top:9%;
     color:white;
     margin-right:65%;
 }
